--- a/2025-01-09 Js -8/index.html
+++ b/2025-01-09 Js -8/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./script.js"></script>
+    <div id="sarasas">
+
+    </div>
+    <script src="./index.js"></script>
+    <!-- <script src="./script.js"></script> -->
 </body>
 </html>
