--- a/2025-01-09 Js -8/index.html
+++ b/2025-01-09 Js -8/index.html
@@ -9,7 +9,7 @@
     <div id="sarasas">
 
     </div>
-    <script src="./index.js"></script>
-    <!-- <script src="./script.js"></script> -->
+    <!-- <script src="./index.js"></script> -->
+    <script src="./script.js"></script>
 </body>
 </html>
