--- a/2025-01-29/index.html
+++ b/2025-01-29/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <h2>Automobiliai</h2>
-    <ul class="cars"></ul>
-    <h2>Šalys</h2>
-    <ul class="countries"></ul>
-    <h2>Spalvos</h2>
-    <ul class=""></ul>
+<ul class="cars"></ul>
+<h2>Šalys</h2>
+<ul class="countries"></ul>
+<h2>Spalvos</h2>
+<ul class=""></ul>
 
-
-    <script src="./script.js"></script>
+<script src="./uzduotys.js"></script>
+    <!-- <script src="./script.js"></script> -->
 </body>
 </html>
