--- a/2025-01-30 js praktika/index.html
+++ b/2025-01-30 js praktika/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div id="myElement">Senas tekstas</div>
+<button id="changeTextButton">Pakeisti tekstą</button> 
+<div class="colorChange">Elemento 1</div>
+<div class="colorChange">Elemento 2</div>
+<div class="colorChange">Elemento 3</div>
+<button id="changeColorButton">Pakeisti spalvą</button> 
+<button id="createButtonButton">Sukurti mygtuką</button>
+<div id="buttonContainer"></div>
+
+<ul id="myList"> 
+    <li>Elemento 1</li>
+  </ul>
+  <button id="addListItemButton">Pridėti sąrašo elementą</button> 
 
     <script src="./script.js"></script>
 </body>
