--- a/2025-01-30 js praktika/index.html
+++ b/2025-01-30 js praktika/index.html
@@ -29,6 +29,31 @@
         <li>Elemento 1</li>
     </ul>
     <button id="addListItemButton">Pridėti sąrašo elementą</button>
+    <hr>
+
+    <div id="removeMe">Pašalink mane</div>
+    <button id="removeButton">Pašalinti elementą</button>
+    <hr>
+
+    <div class="removeClass">Elemento 1</div>
+    <div class="removeClass">Elemento 2</div>
+    <div class="removeClass">Elemento 3</div>
+    <button id="removeAllButton">Pašalinti visus elementus</button>
+    <hr>
+
+    <img id="myImage" src="html.jpg" alt="html logo">
+    <button id="changeSrcButton">Pakeisti paveikslėlį</button>
+    <hr>
+
+    <img id="myImageAlt" src="image.jpg" alt="Pradinis alt">
+    <button id="changeAltButton">Pakeisti alt atributą</button>
+
+
+    <form id="myForm">
+        <input type="text" placeholder="Įveskite tekstą" required>
+        <button type="submit">Pateikti</button>
+    </form>
+
 
     <script src="./script.js"></script>
 </body>
