--- a/2025-01-30 js praktika/index.html
+++ b/2025-01-30 js praktika/index.html
@@ -41,16 +41,16 @@
     <button id="removeAllButton">Pašalinti visus elementus</button>
     <hr>
 
-    <img id="myImage" src="html.jpg" alt="html logo">
+    <img id="myImage" src="./img/html.jpg" alt="html logo">
     <button id="changeSrcButton">Pakeisti paveikslėlį</button>
     <hr>
 
     <img id="myImageAlt" src="image.jpg" alt="Pradinis alt">
     <button id="changeAltButton">Pakeisti alt atributą</button>
-
+    <hr>
 
     <form id="myForm">
-        <input type="text" placeholder="Įveskite tekstą" required>
+        <input id="name" type="text" placeholder="Įveskite tekstą" required>
         <button type="submit">Pateikti</button>
     </form>
 
