--- a/2025-01-30 js 36/index.html
+++ b/2025-01-30 js 36/index.html
@@ -15,11 +15,15 @@
 
     <h3>Aktyvios uzduotys</h3>
     <hr>
-    <ul id="tasks-active"></ul>
+    <ul id="tasks-active">
+        <li><span>Uzduoties pavadinimas</span><button>Istrinti</button><button>Uzduotis atlikta</button></li>
+    </ul>
 
     <h3>Pabaigtos uzduotys</h3>
     <hr>
-    <ul id="tasks-finished"></ul>
+    <ul id="tasks-finished">
+        <li><span>Uzduoties pavadinimas</span><button>Istrinti</button></li>
+    </ul>
 
 
     <script src="./script.js"></script>
