--- a/2025-02-04 js praktika-zaidimas/index.html
+++ b/2025-02-04 js praktika-zaidimas/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <input type="text" placeholder="iveskite skaiciu">
+    <button>submit</button>
+    <div>rezultatas</div>
 
 
     <script src="./script.js"></script>
