--- a/2025-02-04 js 37/index.html
+++ b/2025-02-04 js 37/index.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./script.js">
+    <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-    <form>
-<div>
-    <input type="text" placeholder="Darbuotojo vardas"></div>
-    <div><input type="text" placeholder="Darbuotojo pavarde"></div>
-    <div><input type="text" placeholder="Darbuotjo numeris"></div>
-    <button typr="submit">Pateikti</button>
 
-</form>
+<body>
+    
+        <div>
+            <input id="name" type="text" placeholder="Darbuotojo vardas">
+        </div>
+        <br>
+        <div><input id="lastName" type="text" placeholder="Darbuotojo pavarde"></div>
+        <br>
+        <div><input id="idNumber" type="text" placeholder="Darbuotjo numeris"></div>
+        <br>
+        <button id="button" type="submit">Check in</button>
+        <p id="data"></p>
+
+   
 
     <script src="./script.js"></script>
 </body>
+
 </html>
