--- a/2025-02-05 js 38/index.html
+++ b/2025-02-05 js 38/index.html
@@ -6,9 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <select name="veisles-pasirinkimas" id="veisles-pasirinkimas">
+        <option></option>
+    </select>
+    <img src="" alt="suns-nuotrauka">
+    <h2 id="veisle"></h2>
 
 
-    <script src="./script.js"></script>
+<script src="./index.js"></script>
+    <!-- <script src="./indexmodule.js" type="module"></script> -->
 </body>
 </html>
