--- a/2025-02-04NDjs 38 nd/index.html
+++ b/2025-02-04NDjs 38 nd/index.html
@@ -11,12 +11,15 @@
 <body>
     
         <div>
-            <input id="name" type="text" placeholder="Darbuotojo vardas">
+            <input type="text" placeholder="Darbuotojo vardas">
         </div>
+        <p id="vardas"></p>
         <br>
-        <div><input id="lastName" type="text" placeholder="Darbuotojo pavarde"></div>
+        <div><input type="text" placeholder="Darbuotojo pavarde"></div>
+        <p id="pavarde"></p>
         <br>
         <div><input id="idNumber" type="text" placeholder="Darbuotjo numeris"></div>
+        <p id="numeris"></p>
         <br>
         <button id="button" type="submit">Check in</button>
         <p id="data"></p>
