--- a/2025-02-11 karusele/index.html
+++ b/2025-02-11 karusele/index.html
@@ -9,18 +9,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="./assets/style/style.css">
-    <script src="./assets/script/script.js" defer></script>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./script.js" defer></script>
 </head>
 <body>
     <section class="wrapper">
         <div class="testimonials">
-            <img class="dots1" src="./assets/image/dots2.svg" alt="dots">
+            <img class="dots1" src="./image/dots2.svg" alt="dots">
             <h2 class="title">What our customer are saying</h2>
             <div class="line"></div>
             <div class="slider">
                 <div class="card active">
-                    <img class="card_img" src="./assets/image/client_2.svg" alt="client">
+                    <img class="card_img" src="./image/client_2.svg" alt="client">
                     <div class="card_client">
                         <div class="client_name"> Edward Newgate</div>
                         <div class="client_position">Founder Circle</div>
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="card">
-                    <img class="card_img" src="./assets/image/client_4.svg" alt="client">
+                    <img class="card_img" src="./image/client_4.svg" alt="client">
                     <div class="card_client">
                         <div class="client_name">Barbora Radvilaitė</div>
                         <div class="client_position">Founder Circle</div>
@@ -42,7 +42,7 @@
                 </div>
 
                 <div class="card">
-                    <img class="card_img" src="./assets/image/client_3.svg" alt="client">
+                    <img class="card_img" src="./image/client_3.svg" alt="client">
                     <div class="card_client">
                         <div class="client_name">Vytautas Dydysis</div>
                         <div class="client_position">Founder Circle</div>
@@ -52,17 +52,17 @@
                     </p>
                 </div>
             </div>
-            <img class="dots2" src="./assets/image/dots1.svg" alt="dots">
+            <img class="dots2" src="./image/dots1.svg" alt="dots">
         </div>
 
         <div class="slider_nav">
-            <a class="prev" id="prev"><img src="./assets/image/Vector.svg" alt="arrow"></a>
+            <a class="prev" id="prev"><img src="./image/Vector.svg" alt="arrow"></a>
             <div>
                 <span class="dot"></span>
                 <span class="dot"></span>
                 <span class="dot"></span>
             </div>
-            <a class="next" id="next"><img src="./assets/image/Vector.svg" alt="arrow"></a>
+            <a class="next" id="next"><img src="./image/Vector.svg" alt="arrow"></a>
 
         </div>
     </section>
