--- a/2025-02-11 karusele/index.html
+++ b/2025-02-11 karusele/index.html
@@ -22,7 +22,7 @@
                 <div class="card active">
                     <img class="card_img" src="./image/client_2.svg" alt="client">
                     <div class="card_client">
-                        <div class="client_name"> Edward Newgate</div>
+                        <div class="client_name">1 Edward Newgate</div>
                         <div class="client_position">Founder Circle</div>
                     </div>
                     <p class="card_text">
@@ -33,7 +33,7 @@
                 <div class="card">
                     <img class="card_img" src="./image/client_4.svg" alt="client">
                     <div class="card_client">
-                        <div class="client_name">Barbora Radvilaitė</div>
+                        <div class="client_name">2 Barbora Radvilaitė</div>
                         <div class="client_position">Founder Circle</div>
                     </div>
                     <p class="card_text">
@@ -44,7 +44,7 @@
                 <div class="card">
                     <img class="card_img" src="./image/client_3.svg" alt="client">
                     <div class="card_client">
-                        <div class="client_name">Vytautas Dydysis</div>
+                        <div class="client_name">3 Vytautas Dydysis</div>
                         <div class="client_position">Founder Circle</div>
                     </div>
                     <p class="card_text">
