--- a/2025-02-11 karusele/index.html
+++ b/2025-02-11 karusele/index.html
@@ -18,7 +18,7 @@
             <img class="dots1" src="./image/dots2.svg" alt="dots">
             <h2 class="title">What our customer are saying</h2>
             <div class="line"></div>
-            <div class="slider">
+            <div class="slider" id="slider">
                 <div class="card active">
                     <img class="card_img" src="./image/client_2.svg" alt="client">
                     <div class="card_client">
